# imagine-pp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  appveyor.yml
CMake/: CPackOptions.cmake  ImagineConfig.cmake  NSIS.InstallOptions.ini.in  NSIS.template.in  mkFramework.sh
Doc/: CMakeLists.txt  Doxyfile.in  changelog.d  envVariables.d  getevent.d  installLinux.d.in  installMacOS.d.in  installQthelp.d  installWindows.d.in  mainpage.d.in  quickStartImagine++.odt  trouble.d  usage-labo.d  usage.d
Imagine/: CMakeLists.txt
Imagine/Common/: CMakeLists.txt
Imagine/Common/CMake/: UseImagineCommon.cmake
Imagine/Common/src/: CMakeLists.txt
Imagine/Common/src/Imagine/: Common.h
Imagine/Common/src/Imagine/Common/: Array.h  Base.h  Base.h.in  Color.h  Coords.h  FArray.h  FMatrix.h  FVector.h  IO.h  MultiArray.h  Random.h  Timer.h
Imagine/Common/test/: CMakeLists.txt  test.cpp
Imagine/Graphics/: CMakeLists.txt
Imagine/Graphics/CMake/: UseImagineGraphics.cmake
Imagine/Graphics/src/: CMakeLists.txt  Draw.cpp  Events.cpp  GraphicsApplication.cpp  GraphicsApplication.h  GraphicsUtilities.h  ImageIO.cpp  Interface.cpp  Mesh.cpp  OpenGLWindow.cpp  OpenGLWindow.h  PaintingWindow.cpp  PaintingWindow.h  UserThread.cpp  UserThread.h  Window.cpp
Imagine/Graphics/src/Imagine/: Graphics.h
Imagine/Graphics/src/Imagine/Graphics/: ConfigGraphics.h  ConfigGraphics.h.in  Draw.h  Events.h  ImageIO.h  Interface.h  Mesh.h  Types.h  Window.h
Imagine/Graphics/test/: CMakeLists.txt  example.cpp  particles.cpp  test.cpp
Imagine/Images/: CMakeLists.txt
Imagine/Images/CMake/: UseImagineImages.cmake
Imagine/Images/src/: CMakeLists.txt
Imagine/Images/src/Imagine/: Images.h
Imagine/Images/src/Imagine/Images/: Algos.h  Analyze.h  AnalyzeHeader.h  Border.h  Buffer.h  IO.h  Image.h  Interpol.h  PixelTraits.h  Schemes.h
Imagine/Images/test/: CMakeLists.txt  test.cpp
Imagine/LinAlg/: CMakeLists.txt
Imagine/LinAlg/CMake/: UseImagineLinAlg.cmake
Imagine/LinAlg/src/: CMakeLists.txt  MyEigen1.cpp  MyEigen2.cpp  MyEigen3.cpp  MyEigen4.cpp  MyEigen5.cpp
Imagine/LinAlg/src/Imagine/: LinAlg.h
Imagine/LinAlg/src/Imagine/LinAlg/: Matrix.h  MyEigen.h  SymMatrix.h  Vector.h
Imagine/LinAlg/test/: CMakeLists.txt  test.cpp
Legal/: license.txt
Test/: CMakeLists.txt
